--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "morgan": "^1.9.0",
     "puppeteer": "^0.11.0",
     "server-destroy": "^1.0.1",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "ws": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
