--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -5,27 +5,7 @@ on:
     branches: ["master"]
 
 jobs:
-  publish:
-
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3.0.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5.0.0
-        with:
-          push: true
-          tags: ghcr.io/trusted/url-to-pdf-api:c-${{ github.sha }}
+  build-and-publish:
+    uses: trusted/shared-workflows/.github/workflows/build_and_push_dockerfile.yml@main
+    with:
+      image_name: url-to-pdf-api
