--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,3 +9,10 @@ jobs:
     uses: trusted/shared-workflows/.github/workflows/build_and_push_dockerfile.yml@main
     with:
       image_name: url-to-pdf-api
+      
+  ship:
+    needs: build-and-publish
+    uses: trusted/shared-workflows/.github/workflows/update_kube_state.yml@main
+    with:
+      repo_name: url-to-pdf-api
+      commit_sha: ${{ github.sha }}
